--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "socket-server-cli初始化",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "install": "node ./lib/logLogo"
   },
   "bin": {
     "socket-server-cli": "index.js"
@@ -16,7 +17,8 @@
     "commander": "^11.1.0",
     "download-git-repo": "^3.0.2",
     "figlet": "^1.7.0",
-    "inquirer": "^9.2.12"
+    "inquirer": "^9.2.12",
+    "ora": "^8.0.1"
   },
   "type": "module"
 }
